k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lugx-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lugx-frontend
  template:
    metadata:
      labels:
        app: lugx-frontend
    spec:
      containers:
        - name: lugx-frontend
          image: shafraz1720/lugx-frontend:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: lugx-frontend
spec:
  selector:
    app: lugx-frontend
  ports:
    - port: 80
  type: LoadBalancer
