k8s/ingress-analytics.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress-analytics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /analytics/$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 5000
