k8s/ingress-games.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress-games
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /games/$2
spec:
  ingressClassName: nginx
  rules:
  - host: lugx.local
    http:
      paths:
      - path: /games(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: game-service
            port:
              number: 3000
