k8s/ingress-orders.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress-orders
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /orders/$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 4000
